--- a/WEB/InventoryManagerSystem.WEB/wwwroot/index.html
+++ b/WEB/InventoryManagerSystem.WEB/wwwroot/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>InventoryManagerSystem.WEB</title>
+    <title>InventoryManagerSystem</title>
     <base href="/" />
-<!--    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />-->
-    <link rel="stylesheet" href="css/app.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
+<!--    <link rel="stylesheet" href="css/app.css" />-->
     <link rel="stylesheet" href="tailwind.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="css/app.css"/>
     <link href="InventoryManagerSystem.WEB.styles.css" rel="stylesheet" />
 </head>
 
