--- a/WEB/InventoryManagerSystem.WEB/wwwroot/index.html
+++ b/WEB/InventoryManagerSystem.WEB/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>InventoryManagerSystem</title>
     <base href="/" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://cdn.materialdesignicons.com/6.6.96/css/materialdesignicons.min.css" rel="stylesheet" />
 <!--    <link rel="stylesheet" href="css/app.css" />-->
     <link rel="stylesheet" href="tailwind.css" />
     <link rel="stylesheet" href="css/app.css"/>
@@ -28,6 +29,7 @@
         <span class="dismiss">🗙</span>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </body>
 
 </html>
